source/_style/torillic.css
@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
  --head: 'Crimson Text';
  --body: 'Alegreya', sans-serif;
  --mono: 'Source Code Pro';
  font-family: var(--body);
  font-size: 12pt;

  --offwhite: #fcf5e5;
  --green: #e0e5c1;
  --yellow: #c9ad6a;
  --red: #822000;
  --purple: #704cd9;
}

/** Page **/
.wiki-page {
  position: relative;
  margin: 4rem auto;
  box-sizing: border-box;
  box-shadow:
    inset 0cm -0cm 0.1cm 0.05cm rgba(0, 0, 0, 0.1),
    .5cm .5cm 1cm .5cm rgba(0, 0, 0, 0.5);
  background-image: url("https://www.dndbeyond.com/content/1-0-1895-0/skins/waterdeep/images/mon-summary/paper-texture.png");
  background-color: var(--offwhite);
  width: 21cm;
  /* Add columns */
  column-count: 2;
  column-gap: 1cm;
  column-width: 8cm;
  padding: 2cm;
  padding-bottom: 3cm;
  /* Create 3d context */
  z-index: 0;
}
.wiki-page p, .wiki-page h1, .wiki-page h2, .wiki-page h3, .wiki-page h4, .wiki-page h5, .wiki-page h6, .wiki-page div, .wiki-page pre {
  width: auto;
}
.wiki-page > *:first-child {
  margin-block-start: 0;
}
.ty-on-typewriter-mode .wiki-page {
  column-count: 1;
  padding-bottom: 50%;
}

.fullwidth {
  max-width: 100%; 
  column-span: all; 
  display: block;
  margin: 0;
  margin-bottom: 1cm;
}
h1 + h3,
h1 + h4,
h1 + h5,
h1 + h6,
h1 + p,
h2 + h3,
h2 + h4,
h2 + h5,
h2 + h6,
h2 + p,
.fullwidth + h3,
.fullwidth + h4,
.fullwidth + h5,
.fullwidth + h6,
.fullwidth + p {
  margin-top: 0;
}

main > div {
  box-shadow: .5cm .5cm 1cm .5cm rgba(0, 0, 0, 0.5);
  width: max-content;
  position: relative;
  margin: 4rem auto 5rem auto;
  box-sizing: border-box;
}

/** Responsivity **/
/* Compress for small windows */
@media only screen and (max-width: 22cm) {
  .wiki-page, #typora-source {
    column-count: 1;
    column-width: auto;
    width: calc(100% - 4rem);
    margin: 1rem;
  }
}

/** Headings **/

/* All headings */
h1, h2, h3, h4, h5, h6 {
  margin-block-end: 2pt;
  margin-block-start: 1em;
  line-height: 1em;
  break-inside: avoid;
  break-after: avoid;
}

/* Major headings */
h1, h2, h3, h4 {
  font-family: var(--head);
  font-weight: 700;
  font-variant: small-caps;
  color: var(--red);
}

/* Individual headings */
h1 {
  font-size: 36pt;
  column-span: all;
}

h2 {
  font-size: 28pt;
  column-span: all;
}

h3 {
  font-size: 24pt;
}

h4 {
  font-size: 18pt;
  border-bottom: 1pt solid var(--yellow);
  border-bottom: 1pt solid var(--yellow);
}
h4 a {
  text-decoration: none;
}

h5 {
  font-size: 14pt;
}

h6 {
  font-weight: 700;
  font-size: 12pt;
}

h6 {
  font-size: 12pt;
  font-weight: 400;
  text-decoration: underline;
  text-decoration-color: var(--yellow);
}

hr {
  /* Common to all hr's */
  border-top: 2pt solid transparent;
  border-bottom: 2pt solid transparent;
  border-left-style: solid;
  border-left-color: var(--red);

  /* Top-level hr (aka page delineator) */
  column-span: all;
  border-left-width: 16cm;
  margin-top: 18pt;
  margin-bottom: 36pt;
}

blockquote hr {
  /* Within a blockquote (aka fancy underline) */
  column-span: none;
  border-left-width: 6cm;
  margin-top: 2pt;
  margin-bottom: 2pt;
}

/** Body **/
p {
  margin-block-start: 2pt;
  break-inside: avoid;
}

strong {
  color: var(--red);
}

a {
  color: var(--text-color);
  text-decoration-color: var(--yellow);
}
a:hover {
  color: var(--text-color);
  text-decoration-color: var(--green);
}
h1 a,
h2 a,
h3 a,
h4 a,
strong a {
  color: var(--red);
}

del {
  text-decoration-color: var(--red);
}

mark {
  background-color: var(--green);
}

code, pre {
  background: auto;
  font-family: var(--mono);
}

ol, ul {
  padding-left: 1rem;
}

li::marker {
  font-weight: 700;
  color: var(--red);
}

/** Tables **/
table {
  break-inside: avoid;
}

thead, th {
  font-weight: 700;
}

tbody tr:nth-child(odd) {
  background-color: var(--green);
}

blockquote tbody tr:nth-child(odd), pre blockquote tbody tr:nth-child(odd) {
  background-color: rgba(255, 255, 255, 0.2);
}

td, th {
  padding: 3pt 6pt;
}

/** Blocks **/
pre, pre.md-meta-block {
  background-color: var(--green);
  padding: 6pt;
}

blockquote {
  background-color: var(--green);
  padding: 12pt;
  border-top: 3pt solid var(--red);
  border-bottom: 3pt solid var(--red);
  break-inside: avoid;
  margin: 2mm 2mm 2mm 2mm;
}

blockquote blockquote {
  background-color: rgba(255, 255, 255, 0.5);
}

pre, .md-fences {
    background: var(--green);
    padding: 12pt;
    break-inside: avoid;
}


/** Images **/

img {
  max-width: 8cm;
}
figure {
  margin: 0;
  break-inside: avoid;
}

.splashimg {
  position: relative;
  display: grid;
  align-items: center;
  justify-items: center;
}

.splashimg:before {
  position: absolute;
  top: -1.5cm;
  left: -1.5cm;
  right: -1.5cm;
  bottom: -0.5cm;
  background-image: url("assets/splash.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center center;
  content: " ";
  z-index: -1;
}

